more mobile spacing fixes

--- a/style.css
+++ b/style.css
@@ -403,11 +403,12 @@ input:checked + .slider:before {
 
   .form {
     padding: 28px 16px;
-    gap: 40px;
+    gap: 48px;
   }
 
   .input-group {
-    gap: 12px;
+    gap: 14px;
+    margin-bottom: 8px;
   }
 
   .toggle-group {
